--- a/coffeelover/main/templates/index.html
+++ b/coffeelover/main/templates/index.html
@@ -10,6 +10,7 @@ Copy code
 {% block content %}
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Coffee Lover Blog!</h1>
+        <h3>Do you consider yourself to be a coffee lover?</h3>
         <p class="lead">Explore and share your favorite coffee experiences with other coffee enthusiasts.</p>
     </div>
 
