--- a/coffeelover/main/templates/login.html
+++ b/coffeelover/main/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login - Coffee Lover Blog{% endblock %}
+{% block title %}Login to your account! - Coffee Lover Blog{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center">
@@ -12,7 +12,7 @@
 
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
-            <p class="mt-3">Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
+            <p class="mt-3">Don't have an account? <a href="{% url 'register' %}">Register here now!</a>.</p>
         </div>
     </div>
 {% endblock %}
