--- a/coffeelover/main/templates/register.html
+++ b/coffeelover/main/templates/register.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h2 class="mb-4">Register</h2>
+            <h2 class="mb-4">Register to be part of the coffee lover family!</h2>
             <form method="post" action="{% url 'register' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
