edit register function

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -4,15 +4,20 @@
 
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-4">Welcome to Coffee Lover Blog!</h1>
+        <h1 class="display-4">Welcome to the Coffee Lover Blog!</h1>
+        <br>
         <h3>Do you consider yourself to be a coffee lover?</h3>
+        <br>
         <p class="lead">Explore and share your favorite coffee experiences with other coffee enthusiasts.</p>
+        <br>
         <p>Connect and help others by commenting down guides and tutorials on various coffee brewing methods, such as
             pour-over, French press, espresso, cold brew, etc.
             This may include tips for achieving the best flavors and aromas.</p>
+        <br>
         <p>Write down reviews and recommendations for coffee-making equipment, such as coffee makers, grinders, and brewing
             accessories.
         </p>
+        <br>
         <p>This is your time to connect with other coffee lovers who share the same interests as you!</p>
     </div>
 
@@ -30,7 +35,7 @@
             </div>
         
             <div class="card mb-3">
-                <img src="columbian.jpg" class="card-img-top" alt="Colombian Supremo">
+                <img src="/media/images/columbian.jpg" class="card-img-top" alt="Colombian Supremo">
                 <div class="card-body">
                     <h5 class="card-title">Colombian Supremo</h5>
                     <p class="card-text">Colombian Supremo is a well-balanced coffee with medium acidity and a rich, full-bodied flavor profile. Perfect for a morning pick-me-up.</p>
@@ -38,7 +43,7 @@
             </div>
         
             <div class="card mb-3">
-                <img src="brazillian.jpg" class="card-img-top" alt="Brazilian Santos">
+                <img src="/media/images/brazillian.jpg" class="card-img-top" alt="Brazilian Santos">
                 <div class="card-body">
                     <h5 class="card-title">Brazilian Santos</h5>
                     <p class="card-text">Known for its smooth and nutty flavor, Brazilian Santos is a great choice for those who enjoy a mild and approachable coffee.</p>
@@ -75,17 +80,17 @@
         
             <ul class="list-group">
                 <li class="list-group-item">
-                    <img src="user-1.jpg" class="mr-2" alt="User 1 Avatar" width="32" height="32">
+                    <img src="/media/images/user-1.jpg" class="mr-2" alt="User 1 Avatar" width="32" height="32">
                     Hannah Rayheart
                     <span class="badge badge-primary badge-pill">100 posts</span>
                 </li>
                 <li class="list-group-item">
-                    <img src="user-2.jpg" class="mr-2" alt="User 2 Avatar" width="32" height="32">
+                    <img src="/media/images/user-2.jpg" class="mr-2" alt="User 2 Avatar" width="32" height="32">
                     Jonathan Horan
                     <span class="badge badge-primary badge-pill">85 posts</span>
                 </li>
                 <li class="list-group-item">
-                    <img src="user-3.jpg" class="mr-2" alt="User 3 Avatar" width="32" height="32">
+                    <img src="/media/images/user-3.jpg" class="mr-2" alt="User 3 Avatar" width="32" height="32">
                     Lillian Matthews
                     <span class="badge badge-primary badge-pill">72 posts</span>
                 </li>
