--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Coffee Lover Blog</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Coffee Lover Blog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,6 +44,12 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+
+    <footer class="footer mt-5">
+        <div class="container text-center">
+            <p>&copy; 2024 Coffee Lover Blog. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- Add your JavaScript or link to Bootstrap JS here -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
