--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -66,6 +66,14 @@
         </div>
     </footer>
 
+    <script>
+        setTimeout(function () {
+            let messages = document.getElementById('msg');
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 2500);
+    </script>
+
 
 
 </body>
