add comment form to views

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -27,7 +27,7 @@
             <br>
             <p>This is your time to connect with other coffee lovers who share the same interests as you!</p>
             <br>
-            <p><strong>Scroll down for the existing comments or register to add one!</strong></p>
+            <p><strong>Click the 'Comments' tab for the existing comments or register to add one!</strong></p>
         </div>
     </div>
 
