add content to comment html

--- a/main/templates/comments.html
+++ b/main/templates/comments.html
@@ -3,7 +3,18 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Comments</h2>
+
+    <h2>Get Brewing!</h2>
+    <br>
+    <p>We are thrilled to have you join the conversation on our Coffee Lover's Blog! To share your coffee experiences and
+        insights, please ensure you are logged in. If you don’t have an account yet, signing up is quick and
+        straightforward. Once logged in, you can leave comments on our posts, sharing your favorite brewing techniques,
+        coffee recipes, or café discoveries. Engaging with fellow coffee enthusiasts is a fantastic way to exchange tips and
+        deepen your love for coffee. Your contributions help create a vibrant community where we can all learn and grow
+        together. Happy commenting and coffee brewing!</p>
+    
+
+    <h3>Comments</h3>
     {% for comment in comments %}
         <div class="card mb-3">
             <div class="card-body">
