--- a/main/templates/comments.html
+++ b/main/templates/comments.html
@@ -27,6 +27,7 @@
                         <form method="post" action="{% url 'delete_comment' comment.id %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger">Delete</button>
+                            <a href="{% url 'edit_comment' comment.id %}" class="btn btn-secondary">Edit</a>
                         </form>
                     {% endif %}
                 {% endif %}
